--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-markdown": "^9.0.1"
+        "react-markdown": "^9.0.1",
+        "react-select": "^5.8.0"
     }
 }
